COF-243 Widget - add translations, some UI fixes

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1692,3 +1692,67 @@
 "digicel_feature_cancel_TO" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
 "digicel_feature_cancel_VU" = "يمكنكم إدارة أو إلغاءعضوية lifebox من خلال تطبيق My Digicel.";
 "digicel_feature_cancel_PG" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"widget_rule_0_small_detail" = "";
+"widget_rule_0_small_button" = "";
+"widget_rule_0_medium_detail" = "";
+"widget_rule_0_medium_button" = "";
+"widget_rule_1_small_title" = "";
+"widget_rule_1_small_detail" = "";
+"widget_rule_1_small_button" = "";
+"widget_rule_1_medium_title" = "";
+"widget_rule_1_medium_detail" = "";
+"widget_rule_1_medium_button" = "";
+"widget_rule_2_small_title" = "";
+"widget_rule_2_small_detail" = "";
+"widget_rule_2_small_button" = "";
+"widget_rule_2_medium_title" = "";
+"widget_rule_2_medium_detail" = "";
+"widget_rule_2_medium_button" = "";
+"widget_rule_4_1_small_button" = "";
+"widget_rule_4_1_small_detail" = "";
+"widget_rule_4_1_medium_button" = "";
+"widget_rule_4_1_medium_detail" = "";
+"widget_rule_4_2_small_button" = "";
+"widget_rule_4_2_small_detail" = "";
+"widget_rule_4_2_medium_button" = "";
+"widget_rule_4_2_medium_detail" = "";
+"widget_rule_5_small_detail" = "";
+"widget_rule_5_small_button" = "";
+"widget_rule_5_medium_title" = "";
+"widget_rule_5_medium_detail" = "";
+"widget_rule_5_medium_button" = "";
+"widget_rule_6_small_detail" = "";
+"widget_rule_6_small_button" = "";
+"widget_rule_6_medium_detail" = "";
+"widget_rule_6_medium_button" = "";
+"widget_rule_7_1_small_title" = "";
+"widget_rule_7_1_small_detail" = "";
+"widget_rule_7_1_small_button" = "";
+"widget_rule_7_1_medium_title" = "";
+"widget_rule_7_1_medium_detail" = "";
+"widget_rule_7_1_medium_button" = "";
+"widget_rule_7_2_small_title" = "";
+"widget_rule_7_2_small_detail" = "";
+"widget_rule_7_2_small_button" = "";
+"widget_rule_7_2_medium_title" = "";
+"widget_rule_7_2_medium_detail" = "";
+"widget_rule_7_2_medium_button" = "";
+"widget_rule_7_3_small_detail" = "";
+"widget_rule_7_3_small_button" = "";
+"widget_rule_7_3_medium_detail" = "";
+"widget_rule_7_3_medium_button" = "";
+"widget_rule_7_4_small_detail" = "";
+"widget_rule_7_4_small_button" = "";
+"widget_rule_7_4_medium_detail" = "";
+"widget_rule_7_4_medium_button" = "";
+"billo_contactus_top_text" = "";
+"widget_rule_3_1_small_button" = "";
+"widget_rule_3_1_small_detail" = "";
+"widget_rule_3_1_medium_button" = "";
+"widget_rule_3_1_medium_detail" = "";
+"widget_rule_3_2_small_button" = "";
+"widget_rule_3_2_small_detail" = "";
+"widget_rule_3_2_medium_button" = "";
+"widget_rule_3_2_medium_detail" = "";
+"widget_display_name" = "";
+"widget_description" = "";
