--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1680,3 +1680,67 @@
 "digicel_feature_cancel_TO" = "Sie können Ihr Digicel-Abonnement über die My Digicel-Anwendung oder den Kundendienst kündigen oder verwalten. “";
 "digicel_feature_cancel_VU" = "Sie können Ihr Lifebox-Abonnement über die My Digicel-App kündigen oder verwalten.";
 "digicel_feature_cancel_PG" = "Sie können Ihr Lifebox-Abonnement über die My Digicel-App kündigen oder verwalten.";
+"widget_rule_0_small_detail" = "";
+"widget_rule_0_small_button" = "";
+"widget_rule_0_medium_detail" = "";
+"widget_rule_0_medium_button" = "";
+"widget_rule_1_small_title" = "";
+"widget_rule_1_small_detail" = "";
+"widget_rule_1_small_button" = "";
+"widget_rule_1_medium_title" = "";
+"widget_rule_1_medium_detail" = "";
+"widget_rule_1_medium_button" = "";
+"widget_rule_2_small_title" = "";
+"widget_rule_2_small_detail" = "";
+"widget_rule_2_small_button" = "";
+"widget_rule_2_medium_title" = "";
+"widget_rule_2_medium_detail" = "";
+"widget_rule_2_medium_button" = "";
+"widget_rule_4_1_small_button" = "";
+"widget_rule_4_1_small_detail" = "";
+"widget_rule_4_1_medium_button" = "";
+"widget_rule_4_1_medium_detail" = "";
+"widget_rule_4_2_small_button" = "";
+"widget_rule_4_2_small_detail" = "";
+"widget_rule_4_2_medium_button" = "";
+"widget_rule_4_2_medium_detail" = "";
+"widget_rule_5_small_detail" = "";
+"widget_rule_5_small_button" = "";
+"widget_rule_5_medium_title" = "";
+"widget_rule_5_medium_detail" = "";
+"widget_rule_5_medium_button" = "";
+"widget_rule_6_small_detail" = "";
+"widget_rule_6_small_button" = "";
+"widget_rule_6_medium_detail" = "";
+"widget_rule_6_medium_button" = "";
+"widget_rule_7_1_small_title" = "";
+"widget_rule_7_1_small_detail" = "";
+"widget_rule_7_1_small_button" = "";
+"widget_rule_7_1_medium_title" = "";
+"widget_rule_7_1_medium_detail" = "";
+"widget_rule_7_1_medium_button" = "";
+"widget_rule_7_2_small_title" = "";
+"widget_rule_7_2_small_detail" = "";
+"widget_rule_7_2_small_button" = "";
+"widget_rule_7_2_medium_title" = "";
+"widget_rule_7_2_medium_detail" = "";
+"widget_rule_7_2_medium_button" = "";
+"widget_rule_7_3_small_detail" = "";
+"widget_rule_7_3_small_button" = "";
+"widget_rule_7_3_medium_detail" = "";
+"widget_rule_7_3_medium_button" = "";
+"widget_rule_7_4_small_detail" = "";
+"widget_rule_7_4_small_button" = "";
+"widget_rule_7_4_medium_detail" = "";
+"widget_rule_7_4_medium_button" = "";
+"billo_contactus_top_text" = "";
+"widget_rule_3_1_small_button" = "";
+"widget_rule_3_1_small_detail" = "";
+"widget_rule_3_1_medium_button" = "";
+"widget_rule_3_1_medium_detail" = "";
+"widget_rule_3_2_small_button" = "";
+"widget_rule_3_2_small_detail" = "";
+"widget_rule_3_2_medium_button" = "";
+"widget_rule_3_2_medium_detail" = "";
+"widget_display_name" = "";
+"widget_description" = "";
