--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -1986,3 +1986,67 @@ Please check I have understood the intended command here*/
 "digicel_feature_cancel_TO" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
 "digicel_feature_cancel_VU" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
 "digicel_feature_cancel_PG" = "Annuler ou gérer votre offre lifebox dans My Digicel app";
+"widget_rule_0_small_detail" = "";
+"widget_rule_0_small_button" = "";
+"widget_rule_0_medium_detail" = "";
+"widget_rule_0_medium_button" = "";
+"widget_rule_1_small_title" = "";
+"widget_rule_1_small_detail" = "";
+"widget_rule_1_small_button" = "";
+"widget_rule_1_medium_title" = "";
+"widget_rule_1_medium_detail" = "";
+"widget_rule_1_medium_button" = "";
+"widget_rule_2_small_title" = "";
+"widget_rule_2_small_detail" = "";
+"widget_rule_2_small_button" = "";
+"widget_rule_2_medium_title" = "";
+"widget_rule_2_medium_detail" = "";
+"widget_rule_2_medium_button" = "";
+"widget_rule_4_1_small_button" = "";
+"widget_rule_4_1_small_detail" = "";
+"widget_rule_4_1_medium_button" = "";
+"widget_rule_4_1_medium_detail" = "";
+"widget_rule_4_2_small_button" = "";
+"widget_rule_4_2_small_detail" = "";
+"widget_rule_4_2_medium_button" = "";
+"widget_rule_4_2_medium_detail" = "";
+"widget_rule_5_small_detail" = "";
+"widget_rule_5_small_button" = "";
+"widget_rule_5_medium_title" = "";
+"widget_rule_5_medium_detail" = "";
+"widget_rule_5_medium_button" = "";
+"widget_rule_6_small_detail" = "";
+"widget_rule_6_small_button" = "";
+"widget_rule_6_medium_detail" = "";
+"widget_rule_6_medium_button" = "";
+"widget_rule_7_1_small_title" = "";
+"widget_rule_7_1_small_detail" = "";
+"widget_rule_7_1_small_button" = "";
+"widget_rule_7_1_medium_title" = "";
+"widget_rule_7_1_medium_detail" = "";
+"widget_rule_7_1_medium_button" = "";
+"widget_rule_7_2_small_title" = "";
+"widget_rule_7_2_small_detail" = "";
+"widget_rule_7_2_small_button" = "";
+"widget_rule_7_2_medium_title" = "";
+"widget_rule_7_2_medium_detail" = "";
+"widget_rule_7_2_medium_button" = "";
+"widget_rule_7_3_small_detail" = "";
+"widget_rule_7_3_small_button" = "";
+"widget_rule_7_3_medium_detail" = "";
+"widget_rule_7_3_medium_button" = "";
+"widget_rule_7_4_small_detail" = "";
+"widget_rule_7_4_small_button" = "";
+"widget_rule_7_4_medium_detail" = "";
+"widget_rule_7_4_medium_button" = "";
+"billo_contactus_top_text" = "";
+"widget_rule_3_1_small_button" = "";
+"widget_rule_3_1_small_detail" = "";
+"widget_rule_3_1_medium_button" = "";
+"widget_rule_3_1_medium_detail" = "";
+"widget_rule_3_2_small_button" = "";
+"widget_rule_3_2_small_detail" = "";
+"widget_rule_3_2_medium_button" = "";
+"widget_rule_3_2_medium_detail" = "";
+"widget_display_name" = "";
+"widget_description" = "";
