--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1728,78 +1728,67 @@
 "digicel_feature_cancel_TO" = "Cancel or manage your Lifebox subscription in the My Digicel app";
 "digicel_feature_cancel_VU" = "Cancel or manage your Lifebox subscription in the My Digicel app";
 "digicel_feature_cancel_PG" = "Cancel or manage your Lifebox subscription in the My Digicel app";
-
-"widget_rule_0_small_detail" = "You are not signed in to lifebox";
-"widget_rule_0_small_button" = "Sign in";
-"widget_rule_0_medium_detail" = "You are not signed in to lifebox";
-"widget_rule_0_medium_button" = "Sign in to lifebox";
-
-"widget_rule_1_small_title" = "Your quota is over %d%%.";
-"widget_rule_1_small_detail" = " Time to upgrade your plan.";
-"widget_rule_1_small_button" = "View plans";
-"widget_rule_1_medium_title" = "Your lifebox quota is nearly full.";
+"widget_rule_0_small_detail" = "Stay signed in to get the most out of lifebox.";
+"widget_rule_0_small_button" = "Sign In";
+"widget_rule_0_medium_detail" = "Stay signed in to get the most out of lifebox.";
+"widget_rule_0_medium_button" = "Sign In";
+"widget_rule_1_small_title" = "Your quota is over %d%%";
+"widget_rule_1_small_detail" = "Time to upgrade your plan.";
+"widget_rule_1_small_button" = "View Plans";
+"widget_rule_1_medium_title" = "Your lifebox quota is almost full.";
 "widget_rule_1_medium_detail" = "It’s time to upgrade your plan.";
-"widget_rule_1_medium_button" = "View plans";
-
-"widget_rule_2_small_title" = "Device storage is %d%% used.";
-"widget_rule_2_small_detail" = " You need more space.";
-"widget_rule_2_small_button" = "Free up space";
+"widget_rule_1_medium_button" = "View Plans";
+"widget_rule_2_small_title" = "Device storage is over %d%%";
+"widget_rule_2_small_detail" = "You need more space.";
+"widget_rule_2_small_button" = "Free Up Space";
 "widget_rule_2_medium_title" = "Running out of device storage!";
 "widget_rule_2_medium_detail" = "You need space for new memories.";
-"widget_rule_2_medium_button" = "Free up space";
-
-"widget_rule_3_1_small_button" = "See files";
-"widget_rule_3_1_small_detail" = "%d/%d files synced...\n%@";
-"widget_rule_3_1_medium_button" = "See files";
-"widget_rule_3_1_medium_detail" = "%d/%d files synced...\nSyncing: %@";
-
-"widget_rule_3_2_small_button" = "See files";
-"widget_rule_3_2_small_detail" = "Sync is completed";
-"widget_rule_3_2_medium_button" = "See files";
-"widget_rule_3_2_medium_detail" = "Sync is completed";
-
-"widget_rule_4_1_small_button" = "Auto sync";
-"widget_rule_4_1_small_detail" = "You have files wating for sync";
-"widget_rule_4_1_medium_button" = "Enable auto sync";
-"widget_rule_4_1_medium_detail" = "You have files wating for sync";
-
-"widget_rule_4_2_small_button" = "Launch App";
-"widget_rule_4_2_small_detail" = "You have files files wating for sync";
-"widget_rule_4_2_medium_button" = "Launch App";
-"widget_rule_4_2_medium_detail" = "You have files files wating for sync";
-
-"widget_rule_5_small_detail" = "No backed up contacts.";
-"widget_rule_5_small_button" = "Back up";
+"widget_rule_2_medium_button" = "Free Up Space";
+"widget_rule_4_1_small_button" = "Enable Sync";
+"widget_rule_4_1_small_detail" = "You have files wating to sync.";
+"widget_rule_4_1_medium_button" = "Enable Auto Sync";
+"widget_rule_4_1_medium_detail" = "You have files wating to sync.";
+"widget_rule_4_2_small_button" = "Sync";
+"widget_rule_4_2_small_detail" = "You have files wating to sync.";
+"widget_rule_4_2_medium_button" = "Sync Your Files";
+"widget_rule_4_2_medium_detail" = "You have files wating to sync.";
+"widget_rule_5_small_detail" = "Back up and secure your contacts.";
+"widget_rule_5_small_button" = "Back Up";
 "widget_rule_5_medium_title" = "No backed up contacts.";
-"widget_rule_5_medium_detail" = "Secure your contacts by backing them up.";
-"widget_rule_5_medium_button" = "Back up contacts";
-
-"widget_rule_6_small_title" = "It's over 1 month";
-"widget_rule_6_small_detail" = " since your last contact backup.";
-"widget_rule_6_small_button" = "Back up";
-"widget_rule_6_medium_title" = "It's over 1 month";
-"widget_rule_6_medium_detail" = " since your last contact backup.";
-"widget_rule_6_medium_button" = "Back up contacts";
-
-"widget_rule_7_1_small_detail" = "You have 7 people albums. Check them out!";
-"widget_rule_7_1_small_button" = "People albums";
-"widget_rule_7_1_medium_detail" = "You have 7 people albums. Check them out!";
-"widget_rule_7_1_medium_button" = "See people albums";
-
-"widget_rule_7_2_small_detail" = "You have less than 3 people albums. Upload more!";
-"widget_rule_7_2_small_button" = "Upload photos";
-"widget_rule_7_2_medium_detail" = "You have less than 3 people albums. Upload more!";
-"widget_rule_7_2_medium_button" = "Upload photos";
-
-"widget_rule_7_3_small_detail" = "Group your photos easily by people!";
-"widget_rule_7_3_small_button" = "Enable grouping";
-"widget_rule_7_3_medium_detail" = "What about grouping your photos easily by people?";
-"widget_rule_7_3_medium_button" = "Enable face-image grouping";
-
-"widget_rule_7_4_small_detail" = "Open app to see your photos";
-"widget_rule_7_4_small_button" = "Open app";
-"widget_rule_7_4_medium_detail" = "Open app to see your photos";
-"widget_rule_7_4_medium_button" = "Open app";
-
-"widget_display_name" = "widget_display_name";
-"widget_description" = "widget_description";
+"widget_rule_5_medium_detail" = "Secure your contacts with lifebox.";
+"widget_rule_5_medium_button" = "Back Up Contacts";
+"widget_rule_6_small_detail" = "It's over 1 month since your last contact backup.";
+"widget_rule_6_small_button" = "Back Up";
+"widget_rule_6_medium_detail" = "It's over 1 month since your last contact backup.";
+"widget_rule_6_medium_button" = "Back Up Contacts";
+"widget_rule_7_1_small_title" = "Got your people grouped in albums.";
+"widget_rule_7_1_small_detail" = " View and share!";
+"widget_rule_7_1_small_button" = "View";
+"widget_rule_7_1_medium_title" = "Memories with your loved ones grouped in special albums.";
+"widget_rule_7_1_medium_detail" = "View and share them!";
+"widget_rule_7_1_medium_button" = "See People Albums";
+"widget_rule_7_2_small_title" = "Trying to find faces to group them.";
+"widget_rule_7_2_small_detail" = " Upload more!";
+"widget_rule_7_2_small_button" = "Upload";
+"widget_rule_7_2_medium_title" = "Trying to find faces to group them.";
+"widget_rule_7_2_medium_detail" = " Why not uploading more photos?";
+"widget_rule_7_2_medium_button" = "Upload Photos";
+"widget_rule_7_3_small_detail" = "Group your memories easily by people.";
+"widget_rule_7_3_small_button" = "Enable Grouping";
+"widget_rule_7_3_medium_detail" = "What about organizing your memories easily by people or images?";
+"widget_rule_7_3_medium_button" = "Enable Face&Image Grouping";
+"widget_rule_7_4_small_detail" = "Group your memories easily by people.";
+"widget_rule_7_4_small_button" = "Check it Out";
+"widget_rule_7_4_medium_detail" = "What about organizing your memories easily by people or images?";
+"widget_rule_7_4_medium_button" = "Check it Out";
+"billo_contactus_top_text" = "\"Thank you for contacting us. Your request will be transferred to Digicel, the operator we work with for the Billo application  in order to provide customer support. Your device details, Billo usage information and contact details will be shared with Digicel as well as well as any personal data that may be given by you.\"";
+"widget_rule_3_1_small_button" = "View";
+"widget_rule_3_1_small_detail" = "%d/%d files synced...\n%@";
+"widget_rule_3_1_medium_button" = "View";
+"widget_rule_3_1_medium_detail" = "%d/%d files synced...\nSyncing: %@";
+"widget_rule_3_2_small_button" = "View";
+"widget_rule_3_2_small_detail" = "Sync is completed.";
+"widget_rule_3_2_medium_button" = "View";
+"widget_rule_3_2_medium_detail" = "Sync is completed.";
+"widget_display_name" = "Personal Storage";
+"widget_description" = "Get notified about your device storage and lifebox quota and keep track of your memories.";
