--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1690,3 +1690,67 @@
 "digicel_feature_cancel_TO" = "lifebox aboneliğinizi My Digicel uygulamasından iptal edebilir veya yönetebilirsiniz.";
 "digicel_feature_cancel_VU" = "lifebox aboneliğinizi My Digicel uygulamasından iptal edebilir veya yönetebilirsiniz.";
 "digicel_feature_cancel_PG" = "lifebox aboneliğinizi My Digicel uygulamasından iptal edebilir veya yönetebilirsiniz.";
+"widget_rule_0_small_detail" = "";
+"widget_rule_0_small_button" = "";
+"widget_rule_0_medium_detail" = "";
+"widget_rule_0_medium_button" = "";
+"widget_rule_1_small_title" = "";
+"widget_rule_1_small_detail" = "";
+"widget_rule_1_small_button" = "";
+"widget_rule_1_medium_title" = "";
+"widget_rule_1_medium_detail" = "";
+"widget_rule_1_medium_button" = "";
+"widget_rule_2_small_title" = "";
+"widget_rule_2_small_detail" = "";
+"widget_rule_2_small_button" = "";
+"widget_rule_2_medium_title" = "";
+"widget_rule_2_medium_detail" = "";
+"widget_rule_2_medium_button" = "";
+"widget_rule_4_1_small_button" = "";
+"widget_rule_4_1_small_detail" = "";
+"widget_rule_4_1_medium_button" = "";
+"widget_rule_4_1_medium_detail" = "";
+"widget_rule_4_2_small_button" = "";
+"widget_rule_4_2_small_detail" = "";
+"widget_rule_4_2_medium_button" = "";
+"widget_rule_4_2_medium_detail" = "";
+"widget_rule_5_small_detail" = "";
+"widget_rule_5_small_button" = "";
+"widget_rule_5_medium_title" = "";
+"widget_rule_5_medium_detail" = "";
+"widget_rule_5_medium_button" = "";
+"widget_rule_6_small_detail" = "";
+"widget_rule_6_small_button" = "";
+"widget_rule_6_medium_detail" = "";
+"widget_rule_6_medium_button" = "";
+"widget_rule_7_1_small_title" = "";
+"widget_rule_7_1_small_detail" = "";
+"widget_rule_7_1_small_button" = "";
+"widget_rule_7_1_medium_title" = "";
+"widget_rule_7_1_medium_detail" = "";
+"widget_rule_7_1_medium_button" = "";
+"widget_rule_7_2_small_title" = "";
+"widget_rule_7_2_small_detail" = "";
+"widget_rule_7_2_small_button" = "";
+"widget_rule_7_2_medium_title" = "";
+"widget_rule_7_2_medium_detail" = "";
+"widget_rule_7_2_medium_button" = "";
+"widget_rule_7_3_small_detail" = "";
+"widget_rule_7_3_small_button" = "";
+"widget_rule_7_3_medium_detail" = "";
+"widget_rule_7_3_medium_button" = "";
+"widget_rule_7_4_small_detail" = "";
+"widget_rule_7_4_small_button" = "";
+"widget_rule_7_4_medium_detail" = "";
+"widget_rule_7_4_medium_button" = "";
+"billo_contactus_top_text" = "\"Bizi tercih ettiğin için teşekkürler. Talebini Digicel destek ekibi ile paylaşacağız. Digicel, Billo uygulaması için anlaşmalı çalıştığımız operatördür. Talebinle ilgili detaylı analiz yapıp hızlı çözüm sağlanabilmesi için varsa talebinde belirttiğin kişisel verilerin yanı sıra, cihaz bilgilerin, Billo kullanım bilgilerin ve iletişim bilgilerin de Digicel ile paylaşılacak.\"";
+"widget_rule_3_1_small_button" = "";
+"widget_rule_3_1_small_detail" = "";
+"widget_rule_3_1_medium_button" = "";
+"widget_rule_3_1_medium_detail" = "";
+"widget_rule_3_2_small_button" = "";
+"widget_rule_3_2_small_detail" = "";
+"widget_rule_3_2_medium_button" = "";
+"widget_rule_3_2_medium_detail" = "";
+"widget_display_name" = "";
+"widget_description" = "";
