new localisation + version up

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1741,46 +1741,46 @@
 "widget_rule_2_small_title" = "Device storage is over %d%%";
 "widget_rule_2_small_detail" = "You need more space.";
 "widget_rule_2_small_button" = "Free Up Space";
-"widget_rule_2_medium_title" = "Running out of device storage!";
+"widget_rule_2_medium_title" = "You're running out of device storage!";
 "widget_rule_2_medium_detail" = "You need space for new memories.";
 "widget_rule_2_medium_button" = "Free Up Space";
 "widget_rule_4_1_small_button" = "Enable Sync";
-"widget_rule_4_1_small_detail" = "You have files wating to sync.";
+"widget_rule_4_1_small_detail" = "You have files waiting to be synced.";
 "widget_rule_4_1_medium_button" = "Enable Auto Sync";
-"widget_rule_4_1_medium_detail" = "You have files wating to sync.";
+"widget_rule_4_1_medium_detail" = "You have files waiting to be synced.";
 "widget_rule_4_2_small_button" = "Sync";
-"widget_rule_4_2_small_detail" = "You have files wating to sync.";
+"widget_rule_4_2_small_detail" = "You have files waiting to be synced.";
 "widget_rule_4_2_medium_button" = "Sync Your Files";
-"widget_rule_4_2_medium_detail" = "You have files wating to sync.";
+"widget_rule_4_2_medium_detail" = "You have files waiting to be synced.";
 "widget_rule_5_small_detail" = "Back up and secure your contacts.";
 "widget_rule_5_small_button" = "Back Up";
-"widget_rule_5_medium_title" = "No backed up contacts.";
+"widget_rule_5_medium_title" = "You have not backed up your contacts";
 "widget_rule_5_medium_detail" = "Secure your contacts with lifebox.";
 "widget_rule_5_medium_button" = "Back Up Contacts";
 "widget_rule_6_small_detail" = "It's over 1 month since your last contact backup.";
 "widget_rule_6_small_button" = "Back Up";
 "widget_rule_6_medium_detail" = "It's over 1 month since your last contact backup.";
 "widget_rule_6_medium_button" = "Back Up Contacts";
-"widget_rule_7_1_small_title" = "Got your people grouped in albums.";
+"widget_rule_7_1_small_title" = "Group your photos and find them easily!";
 "widget_rule_7_1_small_detail" = " View and share!";
 "widget_rule_7_1_small_button" = "View";
 "widget_rule_7_1_medium_title" = "Memories with your loved ones grouped in special albums.";
 "widget_rule_7_1_medium_detail" = "View and share them!";
 "widget_rule_7_1_medium_button" = "See People Albums";
-"widget_rule_7_2_small_title" = "Trying to find faces to group them.";
+"widget_rule_7_2_small_title" = "More photos means easier face grouping.";
 "widget_rule_7_2_small_detail" = " Upload more!";
 "widget_rule_7_2_small_button" = "Upload";
-"widget_rule_7_2_medium_title" = "Trying to find faces to group them.";
+"widget_rule_7_2_medium_title" = "More photos means easier face grouping.";
 "widget_rule_7_2_medium_detail" = " Why not uploading more photos?";
 "widget_rule_7_2_medium_button" = "Upload Photos";
-"widget_rule_7_3_small_detail" = "Group your memories easily by people.";
+"widget_rule_7_3_small_detail" = "Organize your memories easily with people grouping";
 "widget_rule_7_3_small_button" = "Enable Grouping";
 "widget_rule_7_3_medium_detail" = "What about organizing your memories easily by people or images?";
-"widget_rule_7_3_medium_button" = "Enable Face&Image Grouping";
+"widget_rule_7_3_medium_button" = "Enable Face & Image Grouping";
 "widget_rule_7_4_small_detail" = "Group your memories easily by people.";
-"widget_rule_7_4_small_button" = "Check it Out";
+"widget_rule_7_4_small_button" = "Check It Out";
 "widget_rule_7_4_medium_detail" = "What about organizing your memories easily by people or images?";
-"widget_rule_7_4_medium_button" = "Check it Out";
+"widget_rule_7_4_medium_button" = "Check It Out";
 "billo_contactus_top_text" = "\"Thank you for contacting us. Your request will be transferred to Digicel, the operator we work with for the Billo application  in order to provide customer support. Your device details, Billo usage information and contact details will be shared with Digicel as well as well as any personal data that may be given by you.\"";
 "widget_rule_3_1_small_button" = "View";
 "widget_rule_3_1_small_detail" = "%d/%d files synced...\n%@";
