--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1694,67 +1694,67 @@
 "digicel_feature_cancel_TO" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
 "digicel_feature_cancel_VU" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
 "digicel_feature_cancel_PG" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
-"widget_rule_0_small_detail" = "";
-"widget_rule_0_small_button" = "";
-"widget_rule_0_medium_detail" = "";
-"widget_rule_0_medium_button" = "";
-"widget_rule_1_small_title" = "";
-"widget_rule_1_small_detail" = "";
-"widget_rule_1_small_button" = "";
-"widget_rule_1_medium_title" = "";
-"widget_rule_1_medium_detail" = "";
-"widget_rule_1_medium_button" = "";
-"widget_rule_2_small_title" = "";
-"widget_rule_2_small_detail" = "";
-"widget_rule_2_small_button" = "";
-"widget_rule_2_medium_title" = "";
-"widget_rule_2_medium_detail" = "";
-"widget_rule_2_medium_button" = "";
-"widget_rule_4_1_small_button" = "";
-"widget_rule_4_1_small_detail" = "";
-"widget_rule_4_1_medium_button" = "";
-"widget_rule_4_1_medium_detail" = "";
-"widget_rule_4_2_small_button" = "";
-"widget_rule_4_2_small_detail" = "";
-"widget_rule_4_2_medium_button" = "";
-"widget_rule_4_2_medium_detail" = "";
-"widget_rule_5_small_detail" = "";
-"widget_rule_5_small_button" = "";
-"widget_rule_5_medium_title" = "";
-"widget_rule_5_medium_detail" = "";
-"widget_rule_5_medium_button" = "";
-"widget_rule_6_small_detail" = "";
-"widget_rule_6_small_button" = "";
-"widget_rule_6_medium_detail" = "";
-"widget_rule_6_medium_button" = "";
-"widget_rule_7_1_small_title" = "";
-"widget_rule_7_1_small_detail" = "";
-"widget_rule_7_1_small_button" = "";
-"widget_rule_7_1_medium_title" = "";
-"widget_rule_7_1_medium_detail" = "";
-"widget_rule_7_1_medium_button" = "";
-"widget_rule_7_2_small_title" = "";
-"widget_rule_7_2_small_detail" = "";
-"widget_rule_7_2_small_button" = "";
-"widget_rule_7_2_medium_title" = "";
-"widget_rule_7_2_medium_detail" = "";
-"widget_rule_7_2_medium_button" = "";
-"widget_rule_7_3_small_detail" = "";
-"widget_rule_7_3_small_button" = "";
-"widget_rule_7_3_medium_detail" = "";
-"widget_rule_7_3_medium_button" = "";
-"widget_rule_7_4_small_detail" = "";
-"widget_rule_7_4_small_button" = "";
-"widget_rule_7_4_medium_detail" = "";
-"widget_rule_7_4_medium_button" = "";
-"billo_contactus_top_text" = "";
-"widget_rule_3_1_small_button" = "";
-"widget_rule_3_1_small_detail" = "";
-"widget_rule_3_1_medium_button" = "";
-"widget_rule_3_1_medium_detail" = "";
-"widget_rule_3_2_small_button" = "";
-"widget_rule_3_2_small_detail" = "";
-"widget_rule_3_2_medium_button" = "";
-"widget_rule_3_2_medium_detail" = "";
-"widget_display_name" = "";
-"widget_description" = "";
+"widget_rule_0_small_detail" = "Для непрерывного резервного копирования необходимо войти в систему.";
+"widget_rule_0_small_button" = "Войти в Систему";
+"widget_rule_0_medium_detail" = "Войдите в систему для доступа к новейшим функциям lifebox и непрерывного резервного копирования.";
+"widget_rule_0_medium_button" = "Войти в Систему";
+"widget_rule_1_small_title" = "Ваша квота lifebox превысила %d%%.";
+"widget_rule_1_small_detail" = "Пришло время обновить свой план.";
+"widget_rule_1_small_button" = "Ознакомиться";
+"widget_rule_1_medium_title" = "Ваша квота lifebox превысила %d%%.";
+"widget_rule_1_medium_detail" = "Пришло время обновить свой план.";
+"widget_rule_1_medium_button" = "Ознакомиться с Планами Подписки";
+"widget_rule_2_small_title" = "Память вашего устройства почти заполнена.";
+"widget_rule_2_small_detail" = "Вам необходимо пространство.";
+"widget_rule_2_small_button" = "Освободить Место";
+"widget_rule_2_medium_title" = "Память вашего устройства почти заполнена!";
+"widget_rule_2_medium_detail" = "Вам необходимо пространство для новых воспоминаний.";
+"widget_rule_2_medium_button" = "Освободить Место";
+"widget_rule_4_1_small_button" = "Включить Синхронизацию";
+"widget_rule_4_1_small_detail" = "У вас есть файлы, ожидающие синхронизации.";
+"widget_rule_4_1_medium_button" = "Включить Автоматическую Синхронизацию";
+"widget_rule_4_1_medium_detail" = "У вас есть файлы, ожидающие синхронизации.";
+"widget_rule_4_2_small_button" = "Синхронизировать";
+"widget_rule_4_2_small_detail" = "У вас есть файлы, ожидающие синхронизации.";
+"widget_rule_4_2_medium_button" = "Начать Синхронизацию";
+"widget_rule_4_2_medium_detail" = "У вас есть файлы, ожидающие синхронизации.";
+"widget_rule_5_small_detail" = "Сделайте резервную копию и защитите свои контакты.";
+"widget_rule_5_small_button" = "Резервное Копирование";
+"widget_rule_5_medium_title" = "Вы не создали резервную копию своих контактов.";
+"widget_rule_5_medium_detail" = "Защитите свои контакты с помощью lifebox.";
+"widget_rule_5_medium_button" = "Резервное Копирование Контактов";
+"widget_rule_6_small_detail" = "Прошло больше месяца с момента создания последней резервной копии контактов.";
+"widget_rule_6_small_button" = "Резервное Копирование";
+"widget_rule_6_medium_detail" = "С момента создания последней резервной копии контактов прошло больше месяца. Прямо сейчас, в lifebox, обезопасте свои контакты.";
+"widget_rule_6_medium_button" = "Резервное Копирование Контактов";
+"widget_rule_7_1_small_title" = "Мы создали специальные альбомы по лицам на ваших фотографиях. ";
+"widget_rule_7_1_small_detail" = "Смотрите и делитесь!";
+"widget_rule_7_1_small_button" = "Просмотреть";
+"widget_rule_7_1_medium_title" = "Мы сгруппировали ваши воспоминания по людям и создали специальные альбомы.";
+"widget_rule_7_1_medium_detail" = "Смотрите и делитесь ими!";
+"widget_rule_7_1_medium_button" = "Просмотреть Альбомы";
+"widget_rule_7_2_small_title" = "Чем больше фотографий ";
+"widget_rule_7_2_small_detail" = " тем проще группировка лиц.";
+"widget_rule_7_2_small_button" = "Загрузить Фото";
+"widget_rule_7_2_medium_title" = "Чем больше фотографий, тем точнее группировка лиц.";
+"widget_rule_7_2_medium_detail" = "Загрузить фото";
+"widget_rule_7_2_medium_button" = "Загрузить";
+"widget_rule_7_3_small_detail" = "Организуйте свои воспоминания легко с помощью группировки людей.";
+"widget_rule_7_3_small_button" = "Включить Группировку";
+"widget_rule_7_3_medium_detail" = "Как насчет того, чтобы легко организовать свои воспоминания по людям и объектам?";
+"widget_rule_7_3_medium_button" = "Включить Группировку Лиц&Объектов";
+"widget_rule_7_4_small_detail" = "Легко группируйте свои воспоминания по людям.";
+"widget_rule_7_4_small_button" = "Проверьте Это";
+"widget_rule_7_4_medium_detail" = "Как насчет того, чтобы легко организовать свои воспоминания по людям и объектам?";
+"widget_rule_7_4_medium_button" = "Проверьте Это";
+"billo_contactus_top_text" = "\"Спасибо, что выбрали нас. Мы поделимся вашим запросом со службой поддержки Digicel. Digicel - это оператор, с которым мы сотрудничаем для приложения Billo. Для проведения подробного анализа вашего запроса и предоставления быстрого решения, информация об устройстве, информация об использовании Billo, контактная информация будут переданы Digicel в дополнение к персональным данным, которые вы указали в своем запросе.\"";
+"widget_rule_3_1_small_button" = "Просмотреть";
+"widget_rule_3_1_small_detail" = "%d/%d файлов синхронизируется...\n%@";
+"widget_rule_3_1_medium_button" = "Просмотреть";
+"widget_rule_3_1_medium_detail" = "%d/%d файлов синхронизируется...\nСинхронизировано: %@";
+"widget_rule_3_2_small_button" = "Просмотреть";
+"widget_rule_3_2_small_detail" = "Синхронизация завершена.";
+"widget_rule_3_2_medium_button" = "Просмотреть";
+"widget_rule_3_2_medium_detail" = "Синхронизация завершена.";
+"widget_display_name" = "Личное Хранилище";
+"widget_description" = "Вы можете хранить свои воспоминания и телефон в безопасности, получая уведомления о памяти устройства и объеме памяти lifebox.";
