--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -575,10 +575,10 @@
 "error_login" = "Yükleme yapabilmek için önce %@'a login olmalısın.";
 "uploading" = "Yükleniyor";
 "widgetBottomTitleLastSyncFormat" = "Son Yedekleme: %@";
-"widgetBottomTitleNewerSyncronized" = "Henüz yapmadın";
-"widgetTopTitleFinished" = "Yükleme tamamlandı.";
-"widgetTopTitleInactive" = "Otomatik yükleme aktif değil";
-"widgetTopTitleInProgress" = "Yükleme devam ediyor...";
+"widgetBottomTitleNewerSyncronized" = "Henüz yedekleme yapmadın";
+"widgetTopTitleFinished" = "Yedekleme tamamlandı.";
+"widgetTopTitleInactive" = "Otomatik yedekleme aktif değil";
+"widgetTopTitleInProgress" = "Yedekleme devam ediyor...";
 "error_authentication_message" = "Devam edebilmek için lütfen uygulamayı açıp giriş yapın.";
 "error_authentication_title" = "%@'a giriş yapın.";
 "error_passcode_message" = "Dosyalar uygulamasını kullanabilmek için lifebox parolasını kaldırman gerekiyor.";
@@ -1690,67 +1690,67 @@
 "digicel_feature_cancel_TO" = "lifebox aboneliğinizi My Digicel uygulamasından iptal edebilir veya yönetebilirsiniz.";
 "digicel_feature_cancel_VU" = "lifebox aboneliğinizi My Digicel uygulamasından iptal edebilir veya yönetebilirsiniz.";
 "digicel_feature_cancel_PG" = "lifebox aboneliğinizi My Digicel uygulamasından iptal edebilir veya yönetebilirsiniz.";
-"widget_rule_0_small_detail" = "";
-"widget_rule_0_small_button" = "";
-"widget_rule_0_medium_detail" = "";
-"widget_rule_0_medium_button" = "";
-"widget_rule_1_small_title" = "";
-"widget_rule_1_small_detail" = "";
-"widget_rule_1_small_button" = "";
-"widget_rule_1_medium_title" = "";
-"widget_rule_1_medium_detail" = "";
-"widget_rule_1_medium_button" = "";
-"widget_rule_2_small_title" = "";
-"widget_rule_2_small_detail" = "";
-"widget_rule_2_small_button" = "";
-"widget_rule_2_medium_title" = "";
-"widget_rule_2_medium_detail" = "";
-"widget_rule_2_medium_button" = "";
-"widget_rule_4_1_small_button" = "";
-"widget_rule_4_1_small_detail" = "";
-"widget_rule_4_1_medium_button" = "";
-"widget_rule_4_1_medium_detail" = "";
-"widget_rule_4_2_small_button" = "";
-"widget_rule_4_2_small_detail" = "";
-"widget_rule_4_2_medium_button" = "";
-"widget_rule_4_2_medium_detail" = "";
-"widget_rule_5_small_detail" = "";
-"widget_rule_5_small_button" = "";
-"widget_rule_5_medium_title" = "";
-"widget_rule_5_medium_detail" = "";
-"widget_rule_5_medium_button" = "";
-"widget_rule_6_small_detail" = "";
-"widget_rule_6_small_button" = "";
-"widget_rule_6_medium_detail" = "";
-"widget_rule_6_medium_button" = "";
-"widget_rule_7_1_small_title" = "";
-"widget_rule_7_1_small_detail" = "";
-"widget_rule_7_1_small_button" = "";
-"widget_rule_7_1_medium_title" = "";
-"widget_rule_7_1_medium_detail" = "";
-"widget_rule_7_1_medium_button" = "";
-"widget_rule_7_2_small_title" = "";
-"widget_rule_7_2_small_detail" = "";
-"widget_rule_7_2_small_button" = "";
-"widget_rule_7_2_medium_title" = "";
-"widget_rule_7_2_medium_detail" = "";
-"widget_rule_7_2_medium_button" = "";
-"widget_rule_7_3_small_detail" = "";
-"widget_rule_7_3_small_button" = "";
-"widget_rule_7_3_medium_detail" = "";
-"widget_rule_7_3_medium_button" = "";
-"widget_rule_7_4_small_detail" = "";
-"widget_rule_7_4_small_button" = "";
-"widget_rule_7_4_medium_detail" = "";
-"widget_rule_7_4_medium_button" = "";
+"widget_rule_0_small_detail" = "Kesintisiz yedekleme için giriş yapmalısın.";
+"widget_rule_0_small_button" = "Giriş Yap";
+"widget_rule_0_medium_detail" = "Kesintisiz yedekleme ve lifebox ile ilgili son özellikler için giriş yap.";
+"widget_rule_0_medium_button" = "Giriş Yap";
+"widget_rule_1_small_title" = "lifebox kotan %d%% üzerinde.";
+"widget_rule_1_small_detail" = " Üst pakete geçmenin tam zamanı.";
+"widget_rule_1_small_button" = "İncele";
+"widget_rule_1_medium_title" = "lifebox kotan %d%% üzerinde.";
+"widget_rule_1_medium_detail" = " Bir üst pakete geçmenin tam zamanı.";
+"widget_rule_1_medium_button" = "Abonelikleri İncele";
+"widget_rule_2_small_title" = "Cihaz hafızan dolmak üzere.";
+"widget_rule_2_small_detail" = "Alana ihtiyacın var.";
+"widget_rule_2_small_button" = "Yer Aç";
+"widget_rule_2_medium_title" = "Cihaz hafızan dolmak üzere!";
+"widget_rule_2_medium_detail" = "Yeni anılar için alana ihtiyacın var.";
+"widget_rule_2_medium_button" = "Yer Aç";
+"widget_rule_4_1_small_button" = "Yedekle";
+"widget_rule_4_1_small_detail" = "Yedeklenmeyi bekleyen dosyaların var.";
+"widget_rule_4_1_medium_button" = "Otomatik Yedeklemeyi Aç";
+"widget_rule_4_1_medium_detail" = "Yedeklenmeyi bekleyen dosyaların var.";
+"widget_rule_4_2_small_button" = "Yedekle";
+"widget_rule_4_2_small_detail" = "Yedeklenmeyi bekleyen dosyaların var.";
+"widget_rule_4_2_medium_button" = "Yedeklemeye Başla";
+"widget_rule_4_2_medium_detail" = "Yedeklenmeyi bekleyen dosyaların var.";
+"widget_rule_5_small_detail" = "Rehberini güvenle yedeklemeye başla.";
+"widget_rule_5_small_button" = "Yedekle";
+"widget_rule_5_medium_title" = "Rehberini henüz yedeklemedin.";
+"widget_rule_5_medium_detail" = "lifebox'a yedekle, rehberini güvenceye al.";
+"widget_rule_5_medium_button" = "Rehberini Yedekle";
+"widget_rule_6_small_detail" = "Rehberini en az 1 aydır yedeklemedin.";
+"widget_rule_6_small_button" = "Yedekle";
+"widget_rule_6_medium_detail" = "Rehberini en son 1 ay önce yedekledin. Hemen lifebox'a gel, rehberini güvenceye al.";
+"widget_rule_6_medium_button" = "Rehberini Yedekle";
+"widget_rule_7_1_small_title" = "Fotoğraflarındaki yüzlere göre özel albümler oluşturduk.";
+"widget_rule_7_1_small_detail" = "İncele ve paylaş!";
+"widget_rule_7_1_small_button" = "Görüntüle";
+"widget_rule_7_1_medium_title" = "Anılarını kişilere göre gruplandırıp özel albümler oluşturduk.";
+"widget_rule_7_1_medium_detail" = "Şimdi keşfet ve paylaş!";
+"widget_rule_7_1_medium_button" = "Albümleri Keşfet";
+"widget_rule_7_2_small_title" = "Daha çok fotoğraf ";
+"widget_rule_7_2_small_detail" = " daha doğru yüz gruplama sağlar.";
+"widget_rule_7_2_small_button" = "Fotoğraf Yükle";
+"widget_rule_7_2_medium_title" = "Daha çok fotoğraf daha doğru yüz gruplama sağlar.";
+"widget_rule_7_2_medium_detail" = "Fotoğraf yükle";
+"widget_rule_7_2_medium_button" = "Yükle";
+"widget_rule_7_3_small_detail" = "Anılarını kişilere göre kolayca gruplayabilirsin.";
+"widget_rule_7_3_small_button" = "Gruplamayı Aç";
+"widget_rule_7_3_medium_detail" = "Anılarını kişi ve nesnelere göre kolayca kategorize etmeye ne dersin?";
+"widget_rule_7_3_medium_button" = "Yüz&Nesne Gruplamayı Aç";
+"widget_rule_7_4_small_detail" = "Anılarını kişilere göre kolayca gruplayabilirsin.";
+"widget_rule_7_4_small_button" = "Keşfet";
+"widget_rule_7_4_medium_detail" = "Anılarını kişi ve nesnelere göre kolayca kategorize etmeye ne dersin?";
+"widget_rule_7_4_medium_button" = "Keşfet";
 "billo_contactus_top_text" = "\"Bizi tercih ettiğin için teşekkürler. Talebini Digicel destek ekibi ile paylaşacağız. Digicel, Billo uygulaması için anlaşmalı çalıştığımız operatördür. Talebinle ilgili detaylı analiz yapıp hızlı çözüm sağlanabilmesi için varsa talebinde belirttiğin kişisel verilerin yanı sıra, cihaz bilgilerin, Billo kullanım bilgilerin ve iletişim bilgilerin de Digicel ile paylaşılacak.\"";
-"widget_rule_3_1_small_button" = "";
-"widget_rule_3_1_small_detail" = "";
-"widget_rule_3_1_medium_button" = "";
-"widget_rule_3_1_medium_detail" = "";
-"widget_rule_3_2_small_button" = "";
-"widget_rule_3_2_small_detail" = "";
-"widget_rule_3_2_medium_button" = "";
-"widget_rule_3_2_medium_detail" = "";
-"widget_display_name" = "";
-"widget_description" = "";
+"widget_rule_3_1_small_button" = "Görüntüle";
+"widget_rule_3_1_small_detail" = "%d/%d dosya yedekleniyor...\n%@";
+"widget_rule_3_1_medium_button" = "Görüntüle";
+"widget_rule_3_1_medium_detail" = "%d/%d dosya yedekleniyor...\nYedeklenen: %@";
+"widget_rule_3_2_small_button" = "Görüntüle";
+"widget_rule_3_2_small_detail" = "Yedekleme tamamlandı.";
+"widget_rule_3_2_medium_button" = "Görüntüle";
+"widget_rule_3_2_medium_detail" = "Yedekleme tamamlandı.";
+"widget_display_name" = "Kişisel Depolama";
+"widget_description" = "Cihaz hafızan ve lifebox saklama alanınla ilgili bildirimleri alarak anılarını ve telefonuna güvende tutabilirsin.";
